# ESMB

./: .flake8  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  NOTICE  README.md  analyze_instability.py  check_amoc.py  check_current_progress.py  check_diff.py  check_pressure_trend.py  debug_amoc_raw.py  debug_cg.py  debug_land_step.py  debug_mask.py  debug_run.py  debug_southern.py  debug_step1.py  diagnose_physics.py  inspect_crash.py  inspect_ic.py  inspect_land_ocean_temp.py  inspect_nc.py  inspect_output_check.py  plot_control_monitoring.py  prefetch_data.py  pyproject.toml  reproduce_zero_amoc.py  requirements.txt  verify_fix.py  verify_mask.py
chronos_esm/: __init__.py  config.py  data.py  forcing.py  io.py  log_utils.py  main.py  orbital.py  profile_model.py  verify_stability.py
dashboard/: start_dashboard.sh
docs/: ATTRIBUTION.md  amoc_tipping.md  paleo_midholocene.md  prognostic_ocean_core.md  release_notes_v0.1.0.md  showcase.md
experiments/: analyze_control_run.py  analyze_final_run.py  analyze_fixed_run.py  analyze_massfix.py  analyze_output.py  analyze_prod_v1.py  analyze_prod_v3_fixed_15y.py  analyze_restored_run.py  analyze_run.py  analyze_sweep.py  analyze_tuned_run.py  analyze_verified_run.py  benchmark_dino.py  calibrate_amoc_fold.py  check_amoc_quick.py  check_amoc_quick_v2.py  check_current_control.py  check_current_noise.py  check_health.py  check_poles.py  check_production_stability.py  check_sst_mask.py  check_sst_noise.py  check_sweeps.py  check_time.py  check_v_simple.py  check_zonal_noise.py  compare_cmip6_deck.py  control_run.py  control_run_tuned.py  debug_amoc.py  debug_amoc_calc.py  debug_loop.py  debug_one_step.py  debug_sync.py  debug_vis.py  diagnose_amoc_barotropic.py  diagnose_coupled_amoc.py  diagnose_gm_amoc.py  diagnose_instability.py  (+145 more)
logs/: amoc_6508941.err  amoc_6515796.err  amoc_6516217.err  analysis_6507635.err  century_6585411.err  control_5762711.err  control_5762714.err  control_5762715.err  control_5762716.err  control_5762718.err  control_5762773.err  control_5762774.err  control_5762825.err  control_5762862.err  control_5762914.err  control_5762964.err  control_5762965.err  control_5763080.err  control_5768432.err  control_5768491.err  control_5768544.err  control_5768546.err  control_5768557.err  control_5768735.err  control_5768772.err  control_5768856.err  control_5768917.err  control_5770082.err  control_5770141.err  control_5783549.err  control_5783766.err  control_5783804.err  control_5784240.err  control_5784293.err  control_5784516.err  control_5784670.err  control_5784958.err  control_5785072.err  control_5787088.err  control_5795031.err  (+226 more)
tests/: __init__.py  reproduce_static_bug.py  test_adjoint.py  test_amoc_inertia.py  test_amoc_metric.py  test_atmos.py  test_barotropic_gyre.py  test_barotropic_munk.py  test_co2_warming_e2e.py  test_convection.py  test_coupler.py  test_deck_schedule.py  test_dino_atmos.py  test_dino_coupling.py  test_dino_step.py  test_flux_correction.py  test_forcing.py  (+16 more)
(+81 files in other folders)
